<resources>
    <string name="app_name">Life_Tracker</string>
    <string name="title_activity_list_edit">ListEdit</string>
    <string name="action_settings">Settings</string>
    <string name="action_new_list">New List</string>
    <string name="action_search">Search</string>
    <string name="action_new_item">New Item</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="list_dialog_create_button">Create</string>
    <string name="list_dialog_cancel_button">Cancel</string>
    <string name="list_dialog_edit_text">New List</string>
    <string name="item_dialog_save_button">Save</string>
    <string name="item_dialog_cancel_button">Cancel</string>
    <string name="attribute_dialog_save_button">Save</string>
    <string name="attribute_dialog_cancel_button">Cancel</string>


    <string name="attribute_name">Name</string>
    <string name="attribute_description">Description</string>
    <string name="attribute_price">Price</string>
    <string name="attribute_quantity">Quantity</string>
    <string name="attribute_priority">Priority</string>
    <string name="attribute_voice">Voice</string>
    <string name="attribute_image">Image</string>
    <string name="attribute_reminder">Reminder</string>
    <string name="attribute_location">Location</string>
    <string name="attribute_web_source">Web-Source</string>
    <string name="title_activity_item_edit">ItemEdit</string>

    <string name="hello_world">Hello world!</string>
</resources>
