<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.rose_hulman.life_tracker.ListEdit">
    <item android:id="@+id/edit"
        android:title="@string/action_edit"
        app:showAsAction="always"
        android:orderInCategory="0"
        android:icon="@drawable/ic_menu_edit"/>
    <item android:id="@+id/add_item"
        android:title="@string/action_new_item"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:icon="@drawable/ic_menu_add"/>
    <item android:id="@+id/delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:icon="@drawable/ic_menu_delete"/>
</menu>
