<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item android:id="@+id/settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"
        android:icon="@drawable/ic_menu_settings_holo_light" />
    <item android:id="@+id/new_list"
        android:title="@string/action_new_list"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_menu_add"/>
    <item android:id="@+id/search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:icon="@drawable/ic_menu_search_holo_light"/>
</menu>
